--- a/writeups/presentation.tex
+++ b/writeups/presentation.tex
@@ -87,7 +87,9 @@
 \definecolor{lblue}{RGB}{51,255,255}
 \definecolor{dgreen}{RGB}{49,128,23}
 \definecolor{nicepink}{RGB}{255, 0, 102}
-\definecolor{nicered}{RGB}{255, 80, 80}
+\definecolor{nicered}{RGB}{255, 100, 100}
+\definecolor{niceredL}{RGB}{255, 150,150}
+\definecolor{niceredH}{RGB}{255, 20, 20}
 \definecolor{lblue}{RGB}{102, 163, 255}
 \definecolor{lgray}{RGB}{217, 217, 217}
 
@@ -155,7 +157,7 @@ how often two organisms appear in the same bin.
 \frametitle{Cooccurrance Network}
 Same idea but now edges weights are compared to a random graph (null model). 
 So we only keep edges that have a higher than ``random" weight.
-\includegraphics[scale = 0.2]{june20/june20_species.png}
+\includegraphics[scale = 0.2]{../old_networks/june20/june20_species.png}
 \end{frame}
 %--------------------------------------------------------------------------------------------------
 %--------------------------------------------------------------------------------------------------
@@ -200,9 +202,27 @@ We can cluster the network to attempt to determine or evaluate meaningful groups
  	\item Diffusion on graph
 \end{itemize}
 \[
-\frac{\partial}{\partial t} u(v,t) = L u(v,t)
+\frac{\partial}{\partial t} u(v,t) = -L u(v,t)
 \]
 where $v$ takes values in the vertex set of the graph. Then, we can encode ``known" information in three ways: initial values, boundary values, or a forcing vector.
+
+
+
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Analyzing a sample - Diffusion Process}
+\[
+\frac{\partial}{\partial t} u(v,t) = -L u(v,t)
+\]
+where $v$ takes values in the vertex set of the graph. Then, we can encode sample information in three ways: initial values, boundary values, or a forcing vector.
+
+\medskip
+Related to spectral clustering - spectral clustering groups by ``distance" in firsk $k$ eigenmodes of diffusion process. This process gives ``distance" in weighted sum of eigenmodes of diffusion process.
+
+\medskip
+{\bf Highest ranked nodes are ``closest" to the sample data}
 
 
 
@@ -378,6 +398,235 @@ where $v$ takes values in the vertex set of the graph. Then, we can encode ``kno
 \end{center}
 \caption{Result of boundary value problem. Hotter colors indicate higher likelihood, with red indicating assumed ``on".}
 \end{figure}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+ Given a sample, we get ranking from a network $N_j$. Let $\b{r}^j(\b{s})$ be the ranking given by diffusion on network $j$. Then,
+\[
+F_j(\b{s}) = F(\b{s},\b{r}^j(\b{s})) = \sum_{i=1}^n c^{r_i^j} \frac{s_i}{\|\b{s}\|_1}
+\]
+and we can attempt to optimize over the networks we have (if there's only a few that's easy). The conjecture is then
+\begin{block}{Conjecture}
+	Assume that $F_j(\b{s}) > F_k(\b{s})$. Then $P(\b{s}|N_j) > P(\b{s}|N_k)$.
+\end{block}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+\begin{figure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = lgray] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = lgray] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = lgray] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (a) edge (e);
+			\draw (c) edge (f);
+			\draw (c) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_1$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = lgray] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = lgray] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = lgray] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (e) edge (d);
+			\draw (d) edge (f);
+			\draw (f) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_2$}
+	\end{subfigure}
+	\caption{Test Networks}
+\end{figure}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+\begin{figure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = niceredL] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = nicered] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = niceredH] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = lgray] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (a) edge (e);
+			\draw (c) edge (f);
+			\draw (c) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_1$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = niceredL] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = nicered] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = niceredH] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = lgray] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (e) edge (d);
+			\draw (d) edge (f);
+			\draw (f) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_2$}
+	\end{subfigure}
+	\caption{``Sample" $u_1 = (\nicefrac{1}{6},\nhalf,\nicefrac{1}{3},0,0,0)$}
+\end{figure}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+\begin{figure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = niceredL] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = niceredH] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = nicered] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (a) edge (e);
+			\draw (c) edge (f);
+			\draw (c) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_1$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = niceredL] {$1$};
+			\node (d) at (0,0) [circle, fill = lgray] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = niceredH] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = nicered] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lgray] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (e) edge (d);
+			\draw (d) edge (f);
+			\draw (f) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_2$}
+	\end{subfigure}
+	\caption{``Sample" $u_2 = (\nicefrac{1}{6},\nhalf,0,0,\nicefrac{1}{3},0)$}
+\end{figure}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+\begin{figure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = lgray] {$1$};
+			\node (d) at (0,0) [circle, fill = niceredL] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = lgray] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = niceredH] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = nicered] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (a) edge (e);
+			\draw (c) edge (f);
+			\draw (c) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_1$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.46\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 1.6]
+			\node (a) at (1,2.3) [circle, fill = lgray] {$1$};
+			\node (d) at (0,0) [circle, fill = niceredL] {$4$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgray] {$3$};
+			\node (b) at (-0.1,1.7) [circle, fill = lgray] {$2$};
+			\node (e) at (1,-0.1) [circle, fill = niceredH] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = nicered] {$6$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (a) edge (d);
+			\draw (e) edge (d);
+			\draw (d) edge (f);
+			\draw (f) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{Network $A_2$}
+	\end{subfigure}
+	\caption{``Sample" $u_3= (0,0,0,\nicefrac{1}{6},\nhalf,\nicefrac{1}{3})$}
+\end{figure}
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+
+	\begin{center}
+		\includegraphics[scale = 0.3]{tiny.png}	
+	\end{center}
+
+\end{frame}
+%--------------------------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Assigning a sample}
+
+	\begin{center}
+		\includegraphics[scale = 0.25]{a_nares.png}	
+	\end{center}
+
+	\begin{center}
+	\includegraphics[scale = 0.25]{random.png}	
+\end{center}
+
 \end{frame}
 %--------------------------------------------------------------------------------------------------
 %--------------------------------------------------------------------------------------------------
