--- a/writeups/co_occurrance.tex
+++ b/writeups/co_occurrance.tex
@@ -880,7 +880,7 @@ and we can attempt to optimize over the networks we have (if there's only a few 
 	Assume that $F_j(\b{s}) > F_k(\b{s})$. Then $P(\b{s}|N_j) > P(\b{s}|N_k)$.
 \end{conj}
 
-It isn't completely clear how to treat ties in this scenario.
+
 
 Let's start with a very simple example. Consider the two networks shown in \cref{more_tests}. Using ``samples" $u_1 = (\nicefrac{1}{6},\nhalf,\nicefrac{1}{3},0,0,0)$, $u_2 = (\nicefrac{1}{6},\nhalf,0,0,\nicefrac{1}{3},0)$, and $u_3= (0,0,0,\nicefrac{1}{6},\nhalf,\nicefrac{1}{3})$ gave results shown in \cref{tiny_res}.
 
@@ -959,6 +959,21 @@ I did the same on a column of training data for the species level network, a col
 	\end{subfigure}
 \caption{A training data column fits the network better than a randomly generated sample.}\label{full_assign}
 \end{figure}
+
+Formally, we have
+\[
+F_j(\b{s}) = \sum_{i=0}^{n-1} c^i s_i
+\]
+where $\b{s} = (u_{j_1}(0),u_{j_2}(0),...,u_{j_n}(0))$ such that if 
+\[
+\frac{d}{dt}\b{u} = -L\b{u}
+\]
+and $U_l = \int_0^{\infty} u_l(t) dt$ then
+\[
+U_{j_1} \geq U_{j_2} \geq \cdots \geq U_{j_n}
+\]
+
+
 \bibliographystyle{plain}
 \bibliography{../../../summer17}
 \end{document}
